Fix personal link alignment.

--- a/_assets/stylesheets/_style.sass
+++ b/_assets/stylesheets/_style.sass
@@ -89,6 +89,9 @@ h2.tagline
   ul
     +inline-list
 
+    > li:first-of-type
+      margin-left: 0
+
 #email_modal
   text-align: center
 
